--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
 img {
     max-width: 100%;
     display: block;
+    object-fit: cover;
+    object-position: center;
 }
 
 a {
@@ -74,6 +76,11 @@ ul {
     grid-template-columns: repeat(2, 1fr);
     max-width: 1000px;
 
+    .conteudo-cover img{
+        object-fit: cover;
+        object-position: center;
+        height: 100%;
+    }
     .introducao {
         background: #fff;
         padding: 2.5rem;
@@ -127,9 +134,7 @@ ul {
     background: #fff;
     padding: 2.5rem;
 
-    :nth-child(odd) {
-        background: #f7f7f7;
-    }
+    
 
     .vantagens-item{
         display: grid;
@@ -137,6 +142,10 @@ ul {
         gap: 10px 20px;
         padding: 20px;
         border-left: 3px solid transparent;
+
+        &:nth-child(odd) {
+            background: #f7f7f7;
+        }
 
         & p {
             grid-column: 2;
@@ -156,3 +165,85 @@ ul {
     padding: 2.5rem;
 
 }
+
+@media (max-width: 1000px) {
+    .container {
+        gap: 30px;
+    }
+
+    .conteudo-vantagem{
+        grid-template-columns: 1fr;
+
+        & h2 {
+            text-align: center;
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .header {
+        display: grid;
+        gap: 20px;
+        
+    }
+
+    .menu {
+        display: grid;
+        gap: 10px;
+        width: 100;
+
+        & a {
+            display: flex;
+            padding: 0.5rem 1rem;
+            justify-content: center;
+            width: calc(100vw - 80px);
+        }
+    }
+
+    .conteudo {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-content: center;
+        
+        & h2 {
+            text-align: center;
+            font-size: 2.5rem;
+        }
+
+        .introducao {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+
+            &::before {
+            content: "";
+            width: 100px;
+            height: 4px;
+            background: #e21;
+            display: inline-block;
+            position: absolute;
+            top: 283px;
+            right: calc(50% - 50px);
+            }
+        }
+    }
+
+}
+
+@media (max-width: 490px) {
+    .introducao::before {
+        display: none !important;
+    }
+}
+
+@media (max-width: 400px) {
+    .conteudo h2 {
+        font-size: 2rem;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+}
+
